brown coal generation added it does not have stone states lol

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,10 @@ loader_version=0.14.19-babric.3-bta
 # HalpLibe
 halplibe_version=3.2.1
 
+# Terrain API
+terrain_api_version=1.4.2-7.1
+
 # Mod
-mod_version=1.0.0
+mod_version=0.1.0
 mod_group=dundigundi
 mod_name=bunnomod
