--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'babric-loom' version '1.1.+'
+	id 'babric-loom' version '1.4.+'
 	id 'java'
 }
 
@@ -96,6 +96,9 @@ dependencies {
 
 	//TerrainAPI
 	modImplementation "TerrainAPI:terrainapi:${project.terrain_api_version}"
+
+	//Catalyst-core
+	modImplementation files('dependencies/catalyst-core-1.1.3.jar')
 
 	implementation "org.slf4j:slf4j-api:1.8.0-beta4"
 	implementation "org.apache.logging.log4j:log4j-slf4j18-impl:2.16.0"
